Flickable is too sensitive.

Drag, stop, release should result in a pan, which does not trigger
a flick.  The current flick threshold velocity is too low, leading
to flicks when a pan gesture is more desireable.

Change-Id: I3aa3bf28cc0ccbb043f3390ff4e044ea587ba3ff
Task-number: QTBUG-19933
Reviewed-by: Bea Lam